@@ -56,11 +56,11 @@
   "external/cloudi_x_ranch",
   "external/cloudi_x_riak_pb",
   "external/cloudi_x_riakc",
+  "external/cloudi_x_syslog",
   "external/cloudi_x_thrift",
   "external/lz4",
   "external/proper",
   "external/snappy",
-  "external/syslog",
   "lib/cpg",
   "lib/erlang_term",
   "lib/key2value",
